<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="textView_app_title">Pomodoro Timer</string>
    <string name="menu_sounds">Sounds</string>
    <string name="menu_title_about">About</string>
    <string name="menu_title_share">Share</string>
    <string name="no_time_to_waste">No Time To Waste !</string>
    <string name="button_start_timer">START</string>
    <string name="time_minutes_header">Time: Minutes</string>
    <string name="app_image">Application image</string>
    <string name="beep">Beep</string>
    <string name="magic_bubble_shimmer">Magic Bubble Shimmer</string>
    <string name="small_bell">Small Bell</string>
    <string name="single_shot">Single Shot</string>
    <string name="pop_goes_the_weasel">Pop Goes The Weasel</string>
    <string name="synth">Synth</string>
    <string name="save_sound">Save</string>
    <string name="back">Back</string>
    <string name="notifications">Notifications</string>
    <string name="about">ABOUT</string>
    <string name="the_pomodoro_technique">The Pomodoro Technique</string>
    <string name="go">GO</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="hint_enter_message">enter the message to send</string>
    <string name="share_message">Hi checkout this cool time management app.</string>
    <string-array name="soundsArray">
        <item>@string/beep</item>
        <item>@string/magic_bubble_shimmer</item>
        <item>@string/small_bell</item>
        <item>@string/single_shot</item>
        <item>@string/pop_goes_the_weasel</item>
        <item>@string/synth</item>
    </string-array>
    <string-array name="abouts_array">
        <item>The Pomodoro Technique</item>
        <item>Application source code</item>
    </string-array>
    <string-array name="abouts_uri_array">
        <item>https://en.wikipedia.org/wiki/Pomodoro_Technique</item>
        <item>https://github.com/kalsmic/pomodoro</item>
    </string-array>
</resources>